Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ h6 {
 }
 
 body {
+  overflow: hidden;
   background: linear-gradient(to bottom, #222222, #000000);
   height: 100vh;
   margin-top: 4rem;
